# UI_Engine

./: .TreeIgnore  .gitignore  .gitmodules  CMakeLists.txt  ENGINE_INTERNALS.txt  README.md  StructuralP.md  build_error.txt  build_error_cmd.txt  build_output.txt  error_log.txt  imgui.ini
.github/workflows/: cmake-multi-platform.yml
Drop_at_EXE/: imgui.ini
Drop_at_EXE/settings/theme/: params.json
Editor/: CMakeLists.txt  main.cpp
Editor/Core/: EditorApplication.cpp  EditorApplication.hpp  EditorBridge.cpp  EditorBridge.hpp  EditorLayer.cpp  EditorLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ThemeSettings.cpp  ThemeSettings.hpp  WindowLayout.cpp  WindowLayout.hpp
Engine/: CMakeLists.txt  main.cpp
Engine/Core/: Application.cpp  Application.hpp  EntryPoint.hpp  GLDebug.hpp  GLFWWindow.cpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Logger.hpp  UUID.cpp  UUID.hpp  Window.hpp
Engine/Core/Commands/: Command.hpp  CommandHistory.hpp  SceneCommands.hpp
Engine/Core/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/Core/Input/: Input.cpp  Input.hpp  ViewportInput.cpp  ViewportInput.hpp
Engine/Core/Resources/: ResourceManager.cpp  ResourceManager.hpp
Engine/Rendering/: Buffer.cpp  Framebuffer.cpp  Renderer.cpp  Renderer.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Texture.hpp  VertexArray.hpp
Engine/Rendering/Buffers/: Buffer.hpp  VertexArray.cpp  VertexArray.hpp
Engine/Rendering/Camera/: EditorCamera.cpp  EditorCamera.hpp
Engine/Rendering/Framebuffer/: Framebuffer.cpp
Engine/Rendering/Mesh/: Mesh.cpp  Mesh.hpp
Engine/Rendering/Shaders/: Shader.cpp  Shader.hpp
Engine/Scene/: Components.hpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneAPI.hpp  build_log.txt  build_log_2.txt  build_log_3.txt
docs/: ARCHITECTURE.md  BUILD.md  COMMAND_SYSTEM.md  FEATURES.md  INPUT_SYSTEM.md  RENDERING.md  SCENE_SYSTEM.md  THEME_SYSTEM.md  UI_ARCHITECTURE.md  UI_IMPROVEMENTS_v2.md  UNDO_REDO_SYSTEM.md
src/: main.cpp
src/Core/: Application.cpp  Application.hpp  GLFWWindow.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Window.hpp
src/Editor/: EditorLayer.cpp  EditorLayer.hpp
src/Renderer/: FrameBuffer.hpp  Renderer.hpp
src/Scene/: Components.hpp  Entity.hpp
